--- a/_posts/2022-11-22-heimdall.md
+++ b/_posts/2022-11-22-heimdall.md
@@ -1,5 +1,5 @@
 ---
-published: false
+published: true
 ---
 # Que é?
 Un portal web que permite agregar marcadores das aplicacións que che interesan. No meu caso é de utilidade para agrupar os diferentes servizos ofrecidos dentro da miña rede local. 
